# ---project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile.sh  configure.sh
app/: CMakeLists.txt
app/src/: App.cpp  ExampleLayer.cpp  ExampleLayer.h  dummy.cpp  dummy.h  testLayer.cpp  testLayer.h
core/: CMakeLists.txt
core/src/: Application.cpp  Asset.h  EntryPoint.h  dummyLib.cpp  dummyLib.h
core/src/corelib/: Application.cpp  Application.h  Assert.h  EntryPoint.h  Layer.h  Log.cpp  Log.h  base.h
tests/: AddTests.cmake  CMakeLists.txt
tests/catch/: catch_main.cpp
tests/src/example/: example.cpp
